Fix CSS on mobile

--- a/scss/partials/_eindgesprek.scss
+++ b/scss/partials/_eindgesprek.scss
@@ -59,9 +59,17 @@
     img {
         transition: all .6s;
 
-        &:not(.no-hover):hover {
-            transform: scale(1.5) translate(-15%, 0);
-            position: relative;
+        @media only screen and (min-width: 512px) {
+            &:not(.no-hover):hover {
+                transform: scale(1.5) translate(-15%, 0);
+                position: relative;
+            }
+        }
+        @media only screen and (max-width: 512px) {
+            &:not(.no-hover):hover {
+                transform: scale(1.4) translate(2%, 0);
+                position: relative;
+            }
         }
     }
 }
